# machi_koro

./: .travis.yml  README.md  pyproject.toml
attic/: machi_koro.py
machikoro/: __init__.py  card.py  constant.py  container.py  effect.py  game.py  interface.py  player.py  rules.py
src/machikoro/: __init__.py  card.py  constant.py
tests/: test_cards.py  test_constants.py  test_container.py  test_effects.py  test_game.py  test_player.py  test_rules.py
